--- a/styles/style.css
+++ b/styles/style.css
@@ -57,3 +57,9 @@ header{
     background-color: rgb(170, 17, 17);
     color: white;  
 }
+footer{
+    background-color: black;
+}
+.list-unstyled li{
+    margin: 10px 0;
+}
